[gd_scene load_steps=2 format=3 uid="uid://00uniy110b61"]

[ext_resource type="Script" uid="uid://0dtkmlims2mt" path="res://Scripts/InventoryUIController.gd" id="1_inventory"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inventory")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 850.0
offset_bottom = 600.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Hero Collection"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Total Heroes: 0 | Total Power: 0"
horizontal_alignment = 1

[node name="FilterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(750, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterGrid" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Back"
